fixed flicker bug with the scroll reveal animation

--- a/css/styles.css
+++ b/css/styles.css
@@ -81,6 +81,10 @@ img {
 }
 
 /*===== CLASS CSS ===== */
+html.sr .load-hidden {
+  visibility: hidden;
+}
+
 .section-title {
   position: relative;
   font-size: var(--h2-font-size);
